<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"

		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>

		<groupId>org.springframework.boot</groupId>

		<artifactId>spring-boot-starter-parent</artifactId>

		<version>3.3.5</version>

	</parent>

	<groupId>org.example</groupId>

	<artifactId>picloud</artifactId>

	<version>0.0.1-SNAPSHOT</version>

	<name>picloud</name>

	<description>Rawabet Backend</description>

	<properties>

		<java.version>17</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<lombok.version>1.18.44</lombok.version>

	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>
		<!-- Spring Web -->
		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-web</artifactId>

		</dependency>

		<!-- JPA -->
		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-data-jpa</artifactId>

		</dependency>

		<!-- Security -->
		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-security</artifactId>

		</dependency>

		<!-- MySQL -->
		<dependency>

			<groupId>com.mysql</groupId>

			<artifactId>mysql-connector-j</artifactId>

			<scope>runtime</scope>

		</dependency>

		<!-- Lombok -->
		<dependency>

			<groupId>org.projectlombok</groupId>

			<artifactId>lombok</artifactId>

			<version>${lombok.version}</version>

			<scope>provided</scope>

		</dependency>

		<!-- JWT -->
		<dependency>

			<groupId>io.jsonwebtoken</groupId>

			<artifactId>jjwt-api</artifactId>

			<version>0.11.5</version>

		</dependency>

		<dependency>

			<groupId>io.jsonwebtoken</groupId>

			<artifactId>jjwt-impl</artifactId>

			<version>0.11.5</version>

			<scope>runtime</scope>

		</dependency>

		<dependency>

			<groupId>io.jsonwebtoken</groupId>

			<artifactId>jjwt-jackson</artifactId>

			<version>0.11.5</version>

			<scope>runtime</scope>

		</dependency>

		<!-- Tests -->
		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-test</artifactId>

			<scope>test</scope>

		</dependency>

		<!-- Mail -->
		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-mail</artifactId>

		</dependency>

	</dependencies>

	<build>

		<plugins>

			<plugin>

				<groupId>org.apache.maven.plugins</groupId>

				<artifactId>maven-compiler-plugin</artifactId>

				<configuration>

					<release>${maven.compiler.release}</release>

					<annotationProcessorPaths>

						<path>

							<groupId>org.projectlombok</groupId>

							<artifactId>lombok</artifactId>

							<version>${lombok.version}</version>

						</path>

					</annotationProcessorPaths>

				</configuration>

			</plugin>

			<plugin>

				<groupId>org.springframework.boot</groupId>

				<artifactId>spring-boot-maven-plugin</artifactId>

			</plugin>

		</plugins>

	</build>

</project>
